--- a/Scopus-Java-Api/pom.xml
+++ b/Scopus-Java-Api/pom.xml
@@ -28,5 +28,10 @@
   		<artifactId>json-simple</artifactId>
   		<version>1.1</version>
   	</dependency>
+  	<dependency>
+  		<groupId>commons-lang</groupId>
+  		<artifactId>commons-lang</artifactId>
+  		<version>2.6</version>
+  	</dependency>
   </dependencies>
 </project>
